assets/theme.scss
/* ---------------------------------------------------------------------- */

/* https://quarto.org/docs/output-formats/html-themes.html#sass-variables */
/* ---------------------------------------------------------------------- */


/*-- scss:defaults --*/
@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');

:root {
    --pink: #f5e9dd;
    --dark: #343a40;
    --purple: #7A82AB;
    --pale_green: #D3E2B1;
    --lightestg: #E6EED2;
    --davo: #7a8c27;
    --avo: #99B030;
    --lavo: #CBDC7F;
    --pavo: #DEE9AF;
    --palest: #EBF2CF;
}

/*navbar text and background*/

$navbar-hl: #99B030;
$navbar-bg: #E6EED2;

$link-color: #7a8c27;
$link-hover-color: #7a8c27;


/*-- scss:rules --*/

/* unvisited link */
a:link {
  color: var(--dark);
  text-decoration: underline;
}

/* visited link */
/*a:visited {
  color:  var(--avo);
  text-decoration: none;
}*/

/* mouse over link */
a:hover {
  color:  #7a8c27;
  text-decoration: underline;
}

/* selected link */
a:active {
  color:  var(--purple);
  text-decoration: none;
} 

/*page background and other options */
// The main body
$grid-body-width: 100% !default;

body {
  font-family: "Roboto Mono", monospace;
  background-color: var(--lightestg);
  color: var(--dark);
  max-width: 100%;
  margin: 0 auto;
  font-size: 18px;
}

section {
  width: 100%;
  margin: 0 auto;
}

h3 {
  margin-bottom: -20px;
  padding: 0;
}

